# icfpc-2021

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  build-test.sh  build.sh  run-bruteforcer-hole.sh  run-bruteforcer.sh  run-gui.sh  run.sh  test.sh
app/: Cargo.toml
app/src/: draw.rs  env.rs  main.rs
common/: Cargo.toml
common/src/: cli.rs  geo_hole_bloom.rs  geo_hole_quad_tree.rs  lib.rs  problem.rs  solver.rs
common/src/solver/: bruteforce.rs  bruteforce_hole.rs  dancer.rs  simulated_annealing.rs
poses/: 1.pose  10.pose  100.pose  101.pose  102.pose  103.pose  104.pose  105.pose  106.pose  107.pose  108.pose  109.pose  11.pose  110.pose  111.pose  112.pose  113.pose  114.pose  115.pose  116.pose  117.pose  118.pose  119.pose  12.pose  120.pose  121.pose  122.pose  123.pose  124.pose  125.pose  126.pose  127.pose  128.pose  129.pose  13.pose  130.pose  131.pose  132.pose  14.pose  15.pose  (+92 more)
solver/autonomous_solver/: Cargo.toml
solver/autonomous_solver/src/: main.rs
solver/bruteforce/: Cargo.toml
solver/bruteforce/src/: main.rs
solver/bruteforce_hole/: Cargo.toml
solver/bruteforce_hole/src/: main.rs
solver/simulated_annealing/: Cargo.toml
solver/simulated_annealing/src/: main.rs
tasks/: fetch-problems.sh
tools/bonus_table/: Cargo.toml
tools/bonus_table/src/: main.rs
