[package]
name = "simulated_annealing"
version = "0.3.0"
authors = ["skobochka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
log = "^0.4"
structopt = "^0.3"
serde_json = "^1.0"
pretty_env_logger = "^0.4"
